--- a/temp.html
+++ b/temp.html
@@ -52,7 +52,7 @@
           <h2> Max Temperature</h2> 
           <hr> 
           <section class ="landing">
-          <img class="focus-image" src="Resources/assets/images/fig1.png" alt="Humidity Map">
+          <img class="focus-image" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig1.png" alt="Temp Map">
           <p> 
             As expected the Max temperature reaches its highest point around 0 degrees which is the location of the equator. Towards the ends of the graph, the temperature sees a sharp decrease, especially at around 80 degrees.   
           </p>
