--- a/wind.html
+++ b/wind.html
@@ -52,7 +52,7 @@
           <h2> Wind Speed</h2> 
           <hr> 
           <section class ="landing">
-          <img class="focus-image" src="Resources/assets/images/fig4.png" alt="Humidity Map">
+          <img class="focus-image" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig4.png" alt="Wind Map">
           <p> 
             Wind speed remains mostly consistent over the range of latitude. Most values are between 5 and 15 mph with a few outliers over 30 mph.    
           </p>
@@ -68,13 +68,13 @@
           <div class="row"> 
             <div class="col-md-6">
               <a target="_blank" href="temp.html">
-              <img class="figure" src="Resources/assets/images/fig1.png" alt="Cloudy Map">
+              <img class="figure" src=" https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig1.png" alt="Temp Map">
               </a>
             </div>
 
            <div class="col-md-6">
               <a target="_blank" href="humid.html">
-              <img class="figure" src="Resources/assets/images/fig2.png" alt="Cloudy Map">
+              <img class="figure" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig2.png" alt="Humid Map">
               </a>
            </div>
           </div> 
@@ -82,13 +82,13 @@
           <div class="row"> 
             <div class="col-md-6">
               <a target="_blank" href="cloud.html">
-              <img class="figure" src="Resources/assets/images/fig3.png" alt="Cloudy Map">
+              <img class="figure" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig3.png" alt="Cloudy Map">
               </a>
             </div>
 
            <div class="col-md-6">
               <a target="_blank" href="wind.html">
-              <img class="figure highlight" src="Resources/assets/images/fig4.png" alt="Cloudy Map">
+              <img class="figure" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig4.png" alt="Wind Map">
               </a>
            </div>
           </div> 
