--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <h2> Summary: Lattitude vs. X</h2> 
           <hr> 
           <section id ="landing">
-          <img id="land-image" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig1.png" alt="Humidity Map">
+          <img id="land-image" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig1.png" alt="Temp Map">
           <p> 
             The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 Cities. After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs.latitude. Factors we looked at included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and the visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.   
           </p>
@@ -68,13 +68,13 @@
           <div class="row"> 
             <div class="col-md-6">
               <a target="_blank" href="temp.html">
-              <img class="figure" src=" https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig1.png" alt="Cloudy Map">
+              <img class="figure" src=" https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig1.png" alt="Temp Map">
               </a>
             </div>
 
            <div class="col-md-6">
               <a target="_blank" href="humid.html">
-              <img class="figure" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig2.png" alt="Cloudy Map">
+              <img class="figure" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig2.png" alt="Humid Map">
               </a>
            </div>
           </div> 
@@ -88,7 +88,7 @@
 
            <div class="col-md-6">
               <a target="_blank" href="wind.html">
-              <img class="figure" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig4.png" alt="Cloudy Map">
+              <img class="figure" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig4.png" alt="Wind Map">
               </a>
            </div>
           </div> 
