--- a/comp.html
+++ b/comp.html
@@ -55,14 +55,14 @@
             <div class="col-md-6">
                 <h3> vs. Max Temperature </h3>
               <a target="_blank" href="temp.html">
-              <img class="compfigure" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig1.png" alt="Cloudy Map">
+              <img class="compfigure" src="https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig1.png" alt="Cloudy Map">
               </a>
             </div>
 
            <div class="col-md-6">
                <h3> vs. Humidity </h3>
               <a target="_blank" href="humid.html">
-              <img class="compfigure" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig2.png" alt="Cloudy Map">
+              <img class="compfigure" src="https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig2.png" alt="Cloudy Map">
               </a>
            </div>
           </div> 
@@ -71,14 +71,14 @@
             <div class="col-md-6">
                 <h3> vs. Cloudiness </h3>
               <a target="_blank" href="cloud.html">
-              <img class="compfigure" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig3.png" alt="Cloudy Map">
+              <img class="compfigure" src="https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig3.png" alt="Cloudy Map">
               </a>
             </div>
 
            <div class="col-md-6">
             <h3> vs. Wind Speed </h3>
               <a target="_blank" href="wind.html">
-              <img class="compfigure" src="https://https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig4.png" alt="Cloudy Map">
+              <img class="compfigure" src="https://mannymanny118.github.io/Web-Design-Challenge/Resources/assets/images/fig4.png" alt="Cloudy Map">
               </a>
            </div>
           </div> 
